--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,3 +1,12 @@
+:root{
+  --hardGray: gray;
+}
+
+*{
+  margin: 0px;
+  padding: 0px;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +14,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background:  black;
 }
 
 code {
