--- a/front/src/components/core/textbox/textbox.css
+++ b/front/src/components/core/textbox/textbox.css
@@ -1,4 +1,4 @@
-.textField{
+/* .textField{
     font-family: inherit;
   width: 100%;
   border: 0;
@@ -9,4 +9,10 @@
   padding: 7px 0;
   background: transparent;
   transition: border-color 0.2s;
+} */
+
+.loginInput{
+  width: 100%;
+  padding: 15px;
+  margin:  10px 0;
 }
