--- a/front/src/styles/footer.css
+++ b/front/src/styles/footer.css
@@ -1,4 +1,8 @@
 .footerContent{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     text-align:center;
     height: 50px;
     line-height: 50px;
