--- a/front/src/styles/loging.css
+++ b/front/src/styles/loging.css
@@ -1,5 +1,22 @@
 .loginContainer{
-    width:calc(100% - 20px);
-    height: 100px;
+    display: flex;
+    flex-wrap: wrap; 
+    margin:  0 30px;
+    height: calc(100vh - 100px - 50px);
+}
+
+.form{
+    flex: 1;
+    text-align: center;
+    padding: 30px;
+} 
+
+.form-img{
+    display: flex;
+    flex: 1;
     padding: 10px;
+}
+
+.form-img img{
+    width: calc(100% - 20px);
 }
