--- a/front/src/components/core/textbox/textbox.css
+++ b/front/src/components/core/textbox/textbox.css
@@ -11,8 +11,16 @@
   transition: border-color 0.2s;
 } */
 
-.loginInput{
+.input{
   width: 100%;
   padding: 15px;
   margin:  10px 0;
+  border: transparent;
+  border-bottom: 3px solid #fff;
+  background-color: transparent;
+  color: #fff;
+}
+
+.loginInput:focus{
+  outline: none;
 }
