dashboard styles "Search component.", updated

--- a/front/src/styles/content.css
+++ b/front/src/styles/content.css
@@ -1,16 +1,25 @@
+.content{
+    display: flex;
+    flex-wrap: wrap;
+    margin:  0px 50px;
+    justify-content: center;
+    height: calc(100vh - 100px - 50px);
+}
+
 .section{
+    display: flex;
     float: left;
-    width:calc(80% - 20px);
+    flex: 2;
+    margin: 0 10px;
+    min-width: calc(80% - 20px);
     background: gray;
     min-height:500px;
     padding: 10px;
 }
 
 .search{
-    float: left;
-    width: calc(20% - 20px);
-    background: green;
-    min-height:500px;
-    padding: 10px;
+     display: flex;
+    min-width: 61px;
+    flex: 1;
 }
 
