--- a/front/src/styles/content.css
+++ b/front/src/styles/content.css
@@ -14,7 +14,7 @@
     min-width: calc(70% - 20px);
     min-height:500px;
     padding: 0 10px;
-    text-align: center;
+    text-align: left;
 }
 
 .search{
