--- a/front/src/styles/header.css
+++ b/front/src/styles/header.css
@@ -6,7 +6,9 @@ header{
     height: 50px;
     width: 100%;
     color: white;
-
+    position: sticky;
+    top: 0px;
+    z-index: 10000
 }
 
 .title{
