--- a/front/src/styles/content.css
+++ b/front/src/styles/content.css
@@ -10,7 +10,7 @@
     display: block;
     float: left;
     flex: 2;
-    margin: 0 10px;
+    margin: 70px 10px 0;
     min-width: calc(70% - 20px);
     min-height:500px;
     padding: 0 10px;
