--- a/front/src/styles/home.css
+++ b/front/src/styles/home.css
@@ -4,7 +4,7 @@
 
 .container{
     width: 100%;
-    margin: 20px 0 14px;
+    margin: 0 0 14px;
     color: white;
     min-height: calc(100vh - 250px);
 }
