--- a/front/src/styles/search.css
+++ b/front/src/styles/search.css
@@ -8,5 +8,10 @@
 
 .searcSticky{
     position: sticky;
-    top: 70px;
-    background: black;}
+    top: 50px;
+    background: black;
+}
+
+.mostSearchedDocuments{
+    margin-top: 40px;
+}
