--- a/front/src/styles/search.css
+++ b/front/src/styles/search.css
@@ -15,6 +15,8 @@
 .mostSearchedDocuments{
     margin-top: 40px;
     position: sticky;
-    top: 0px;
+    top: calc(-1px + -1 * var(--header-sticky-top));
+    bottom: calc(-1px + -1 * var(--header-sticky-bottom));
     z-index: -1;
+    min-height: 738px;
 }
