--- a/front/src/components/core/card/card.css
+++ b/front/src/components/core/card/card.css
@@ -29,3 +29,20 @@
     height: 100%;
     border-radius: 3%;
 }
+
+
+.topTenBox{
+    display: flex;
+    width: 120px;
+    height: 122px;
+    padding: 0px 27px 0 0;
+    margin: 0px 30px 0px 0px
+}
+
+.topTenBox img {
+    object-fit: contain;
+    width: 80%;
+    height: 80%;
+    padding: 0 14px 0 0;
+    border-radius: 3%
+}
