--- a/front/src/styles/header.css
+++ b/front/src/styles/header.css
@@ -15,3 +15,26 @@ header{
     margin-left: 50px;
 }
 
+/*Resolution Iphone X*/
+@media screen and (min-device-width: 375px) and (max-device-width: 1200px)  { 
+    .hamburger{
+        display: flex;
+        cursor: pointer;
+        margin-left: auto;
+    }
+
+    .nav-is-toggled > div > div header > .mainMenu{
+        transform: translateX(0);  
+        opacity: 1;  
+        visibility: visible;
+        height: fit-content;
+        width: fit-content;
+    }   
+}
+
+/*Resolution >= 13' */
+@media screen and (min-device-width: 1200px) { 
+    .hamburger{
+        display: none;
+    }
+}
