--- a/front/src/styles/home.css
+++ b/front/src/styles/home.css
@@ -9,6 +9,15 @@
         flex-basis: 689px;
         color: white;
     }
+
+    /* .container::after {
+        content: '';
+        position: absolute;
+        height: 100vh;
+        transition: 0.4s;
+        opacity: 1;
+        visibility: hidden;
+      } */
 }
 
 /*Resolution >= 13' */
@@ -19,8 +28,7 @@
     
     .container{
         width: 100%;
-        margin: 0 0 14px;
         color: white;
-        min-height: calc(100vh - 250px);
+        min-height: calc(100vh - 340px);
     }
 }
